# vanier-courses-api

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Schedule.tsx
frontend/src/components/interactive/: Button.tsx  Input.tsx  List.tsx
frontend/src/layouts/: main.tsx
frontend/src/pages/: index.tsx  schedule.tsx
src/: lib.rs  main.rs
static/: index.html
